--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "redirect-analyzer-api"
+name = "shivasairam"
 main = "worker.js"
 compatibility_date = "2024-10-01"
 
@@ -12,11 +12,3 @@ REQUEST_TIMEOUT = "8000"
 # Worker limits and configuration
 [limits]
 cpu_ms = 30000
-
-# Development environment
-[env.development]
-name = "redirect-analyzer-api-dev"
-
-[env.development.vars]
-ENVIRONMENT = "development"
-API_VERSION = "1.0.0-dev"
